Adjust css of search pagination position

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -251,8 +251,12 @@
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_info {
 			display: inline-block;
 			padding: 1px;
-			text-shadow: 1px 1px 5px #CCCCCC;
+			//padding-top: 10px;
+			//text-shadow: 1px 1px 5px #CCCCCC;
 			/*min-width: 302px;*/
+		}
+		#wrap_inspector_paginator .css_rows_paginator_info {
+			padding-top: 10px;
 		}
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {
 			display: inline-block;
