Fix css of component_ir inside the tool_image_versions

--- a/lib/dedalo/tools/tool_image_versions/css/tool_image_versions.less
+++ b/lib/dedalo/tools/tool_image_versions/css/tool_image_versions.less
@@ -14,8 +14,7 @@
 /* VERSIONS */
 .wrap_tool_image_versions_page .content_data {
 	display: block;
-	
-	width: 730px;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 }
