Adjust css properties in activity

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -504,29 +504,28 @@ mark {
 			padding-right: 5px;
 			padding-bottom: 0;
 		}
-		// Date (when)
+		// When (date)
 		.table_rows_list_activity .th_column_dd547 {
-			text-align: right;
 			width: 138px;
+			text-align: right;			
 		}
 		.table_rows_list_activity .td_dd547 {
 			text-align: right;		
 			padding-right: 4px;
 			white-space: nowrap;		
 		}
-		// user (who)
+		// Who (user)
 		.table_rows_list_activity .th_column_dd543 {
 			width: 80px;
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
 		// ip address
-		.table_rows_list_activity th:nth-of-type(4), .table_rows_list_activity td:nth-of-type(4) {
-			width: 95px;
+		.table_rows_list_activity .th_column_dd544 {
+			width: 110px;
 			white-space: nowrap;			
 		}
 		// Where
-		//.table_rows_list_activity th:nth-of-type(5), .table_rows_list_activity td:nth-of-type(5) {
 		.table_rows_list_activity .th_column_dd546, .table_rows_list_activity .td_dd546 {
 			width: 155px;
 			white-space: nowrap;
@@ -534,7 +533,6 @@ mark {
 			text-overflow: ellipsis;
 		}
 		// What
-		//.table_rows_list_activity th:nth-of-type(6), .table_rows_list_activity td:nth-of-type(6) {
 		.table_rows_list_activity .th_column_dd545, .table_rows_list_activity .td_dd545 {
 			width: 115px;
 			white-space: nowrap;
@@ -543,6 +541,7 @@ mark {
 		}
 		// Data
 		.table_rows_list_activity .th_column_dd551, .table_rows_list_activity .td_dd551 {
+			width: auto;
 		}
 		.table_rows_list_activity .datos_activity {
 			height: 16px;
