Change table th background for coherence with section_groups

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -434,17 +434,18 @@ mark {
 		padding-bottom: 0px;
 		text-align: left;
 		font-weight: normal;
-		vertical-align: top;
-		color: #292B2A;
-		text-shadow: 0 0 0 transparent, 0 1px 0 #FFF;
-		white-space: nowrap;
-		border-left-width: 1px;
-		border-left-style: solid;
-		border-left-color: #CCC;
+		vertical-align: top;				
+		//white-space: nowrap;		
+		border-left: 1px solid #cccccc;
 		line-height: 14px;
-		background-color: rgba(238,238,238,0.7);
-		background-image: url('../../themes/default/tab_header2.jpg');
-		background-repeat: repeat-x;		
+		//text-shadow: 0 0 0 transparent, 0 1px 0 #FFF;
+		//background-color: rgba(238,238,238,0.7);
+		//background-image: url('../../themes/default/tab_header2.jpg');
+		//background-repeat: repeat-x;
+
+		background-color: #e4e4e4;		
+		//border-bottom: .5px solid #d5d5d5;
+		height: 19px;
 		}
 		.table_rows_list th div.th_title {
 			width: auto;
@@ -454,6 +455,7 @@ mark {
 			white-space: nowrap;
 			display: inline-block;
 			cursor: default;
+			color: #292B2A;
 		}
 		.table_rows_list th:first-child {
 			border-top-left-radius: 5px;
