--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -435,7 +435,7 @@ mark {
 		text-align: left;
 		font-weight: normal;
 		vertical-align: top;				
-		//white-space: nowrap;		
+		white-space: nowrap;
 		border-left: 1px solid #cccccc;
 		line-height: 14px;
 		//text-shadow: 0 0 0 transparent, 0 1px 0 #FFF;
