Transform tool_time_machine list to json model to add pagination

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -421,6 +421,11 @@ div.dato_refecence_default_lang {
 		border-top: 0.5px solid #ccc;
 	}
 
+	// Showed in tool time machine
+	//#wrap_time_machine_page .component_options_container {
+	//	left: -5px;
+	//}
+
 
 	.component_options_container_edit_in_list {
 		display: inline-block;
