--- a/lib/dedalo/component_text_area/css/component_text_area.less
+++ b/lib/dedalo/component_text_area/css/component_text_area.less
@@ -564,6 +564,7 @@ div.mce-tinymce.mce-fullscreen {
 	.reference_container {
 		display: table;
 		width: 100%;
+		padding-bottom: 40px;
 		}
 		.reference_container .label {
 			max-width: 100%;
