--- a/lib/dedalo/tools/tool_time_machine/css/tool_time_machine.less
+++ b/lib/dedalo/tools/tool_time_machine/css/tool_time_machine.less
@@ -1,33 +1,151 @@
+// Variables
+@common_css: "../../../common/css";
 
+// Usage
+@import "@{common_css}/library.less";
 
 /* TOOL WRAPPER
 --------------------------------------------------------------------------------------- */
-.wrap_time_machine_page {
+#wrap_time_machine_page {
 	display: block;
-	width: 100%;
-	height: 100%;
-	min-height: 600px;
-	/*background-color: #FDF96C;*/
 	position: absolute;
+	width: 100%;
+	height: 99.9%;
+	min-height: 600px;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	/*background-color: #FDF96C;*/	
+
+	// Grid
+	display: grid;
+    grid-template-columns: 1fr 1fr;
+   	grid-template-rows: auto 370px; 
 	}	
 
 	/* BOTH ORIGINAL AND PREVIEW COMPONENTS
 	--------------------------------------------------------------------------------------- */
-		.wrap_time_machine_page  #tm_component_actual,
-		.wrap_time_machine_page  #tm_component_time_machine {
+		#wrap_time_machine_page  #tm_component_actual,
+		#wrap_time_machine_page  #tm_component_time_machine {
 			width: 49.9%;
+			width: 100%;
 			float: left;
 			display: block;
 			min-height: 200px;			
 			padding: 5px;
 		}
+		#wrap_time_machine_page  #tm_component_actual {
+			//background-color: #A698EE;
+			// Grid
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: 1;
+			grid-row-end: 2;
+		}
+		#wrap_time_machine_page  #tm_component_time_machine {
+			//background-color: #8BEF9A;
+			// Grid
+			grid-column-start: 2;
+			grid-column-end: 3;
+			grid-row-start: 1;
+			grid-row-end: 2;
+		}
+
 		.css_wrap_time_machine {
 			position: relative;
 			padding-bottom: 10px;
 		}
-		.css_time_machine_label {
-			margin-left: 16.5%;
+
+		// tm_selector_time_machine
+		#tm_selector_time_machine {
+			//background-color: #EDC995;
+			display: block;
+			//position: absolute;
+			//bottom: 10px;		
+			padding: 15px;		
+			width: 99.999%;
+			//height: 28%;
+
+			z-index: 1;
+			background-color: #ffff;
+			border-top: 0.5px solid #f1f1f1;
+			padding-top: 5px;
+			
+			// Grid
+			grid-column-start: 1;
+			grid-column-end: 3;
+			grid-row-start: 2;
+			grid-row-end: 3;			
 		}
+
+		// INFO LINE
+		#info_line_tm {
+			//margin-left: 16.5%;
+			//display: grid;
+			//grid-template-columns: 210px 100px 100px auto;
+			display: flex;
+			width: 100%;
+			height: 25px;
+			margin-bottom: 5px;
+			//border-bottom: 0.5px solid #f1f1f1;			
+
+			// Grid
+			display: grid;
+			grid-template-columns: 100px 106px 2fr 1fr;
+			}
+			#info_line_tm > .css_tool_label {
+				padding: 3px;
+			}
+			#info_line_tm > .tool_lang_selector_source {
+				margin-left: 10px;
+			}
+			#info_line_tm > #info_rows {
+				font-size: 1.2em;
+				padding: 3px;
+				padding-left: 22px;
+				}
+				#info_rows > span:not(first-of-type) {
+					//padding-right: 15px;
+					cursor: pointer;
+					}
+					#info_rows > span:hover {						
+						color: #797273;
+					}
+					#info_rows > span:after {
+						content: " | ";
+						padding-left: 5px;
+						padding-right: 5px;
+					}
+					#info_rows > span:last-of-type:after {
+						content: "";
+						display: none;
+					}
+					#info_rows > span.showed {
+						cursor: default;
+						@media screen and (max-width: @movil_max_width) {
+							font-size: 10px !important;
+					    }
+						}
+						#info_rows > span.showed:hover {
+							color: initial;
+						}
+
+					#info_rows > span.showed > .showed_date {
+						padding-left: 5px;
+						font-size: 0.8em;
+						color: #BFBFBF;
+					}
+			#info_line_tm > .apply_and_save_link {				
+				text-align: right;
+				
+				}
+				#info_line_tm > .apply_and_save_link > .tm_apply_and_save_text {
+					padding: 3px;
+					display: inline-block;
+					font-size: 1.2em;					
+					}
+
+
 		.tm_component_footer_info {
 			font-size: 120%;
 			text-align: center;
@@ -38,7 +156,7 @@
 	/* ORIGINAL COMPONENT
 	   Current active matrix version of current component
 	--------------------------------------------------------------------------------------- */
-	.wrap_time_machine_page #tm_component_actual {
+	#wrap_time_machine_page #tm_component_actual {
 		
 		}
 
@@ -46,7 +164,7 @@
 	/* PREVIEW COMPONENT  
 	   Historic TM component. Default is last save (previous of actual) of source component
 	--------------------------------------------------------------------------------------- */
-	.wrap_time_machine_page #tm_component_time_machine {
+	#wrap_time_machine_page #tm_component_time_machine {
 		
 		}
 
@@ -54,13 +172,8 @@
 	/* ROWS VERSIONS LIST
 	   Versions selector
 	--------------------------------------------------------------------------------------- */
-	.wrap_time_machine_page #tm_selector_time_machine {
-		display: block;
-		position: absolute;
-		bottom: 10px;		
-		padding: 15px;		
-		width: 99.999%;
-		//height: 28%;
+	#tm_selector_time_machine {
+		
 		}
 		#tm_selector_time_machine #tm_rows {
 
@@ -78,10 +191,7 @@
 				float: right;
 				margin-right: 10px;
 				}
-				.tm_header_div .tm_apply_and_save_text {
-					display: inline-block;
-					font-size: 120%;
-				}
+				
 			.css_time_machine_image_aplicate {
 				background-image: url('../../../themes/default/icono-ok.gif');
 				margin-left: 5px;
@@ -97,43 +207,56 @@
 				right: 30px;
 				margin-top: 2px;
 			}
-			.time_machine_record_rows {
+			#time_machine_record_rows {
 				margin: 0px;
 				margin-top: 0px;
 				padding: 5px;
 				background-color: #F1F1F1;
 				border-radius: 4px;
 				color: #333333;
-				max-height: 300px;
+				height: 320px;
 				overflow: auto;
 			}
 			.css_time_machine_record_line {
 				white-space: nowrap;
-				padding: 2px;
-				text-overflow: ellipsis;
-				width: 100%;
-				white-space: nowrap;
-				overflow: hidden;
+				padding: 2px;				
+				width: 100%;				
+				white-space: nowrap;				
+				// Grid
+				display: grid;
+    			grid-template-columns: 220px 30px auto;
 				}
 				.css_time_machine_record_line:hover {
 					background-color: #CCCCCC;
 					cursor: pointer;
 				}
 				.css_time_machine_record_line:active {
-					color: #F7F7F7;
+					color: #F7F7F7 !important;
 					background-color: #7BDE68;
 				}
-			.css_image_go_back {
-				background-image: url('../../../themes/default/back.png');
-				margin-left: 3px;
-				}
-				.css_image_go_back:active {
-					opacity: 0.4;
-				}
 
-			.tool_lang_selector_source {
-				margin-left: 10px;
-			}
+				.css_time_machine_record_line > .date_info {
+					width: 100%;
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
+				.css_time_machine_record_line > .sample_data {
+					font-size: 11px;
+ 					opacity: 1;
+ 					background: none;
+				}
+    
+				
+				.css_image_go_back {
+					background-image: url('../../../themes/default/back.png');
+					margin-left: 3px;
+					}
+					.css_image_go_back:active {
+						opacity: 0.4;
+					}
+
+
+			
 
 	
 	
