Fix appearance issue on dialog box reference info

--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -310,6 +310,13 @@ input.css_autocomplete_hi_dato_hidden {
 	}
 
 
+// component_autocomplete_hi showed in reference info dialog box
+#div_reference_wrapper .css_wrap_component_autocomplete_hi {
+	padding-left: 10px;
+    padding-right: 11px;
+}
+
+
 
 /* AUTOCOMPLETE
 ---------------------------------------- 
