--- a/lib/dedalo/tools/tool_time_machine/css/tool_time_machine.less
+++ b/lib/dedalo/tools/tool_time_machine/css/tool_time_machine.less
@@ -264,6 +264,7 @@
 	--------------------------------------------------------------------------------------- */
 	.css_wrap_time_machine .wrap_component {
 			width: 100% !important;
+			
 		}
 		/* PORTAL CASE
 		--------------------------------------------------------------------------------------- */
@@ -274,7 +275,9 @@
 		
 
 
-
+	#wrap_time_machine_page .wrap_component {
+		pointer-events: none; // Avoid user click on any component element end edit
+	}
 
 
 
