--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -284,6 +284,10 @@ input.css_autocomplete_hi_dato_hidden {
 		color: #f5c39f !important;
 	}
 
+	.grid_item_selected_label {
+		padding: 4px;
+		text-align: right;
+	}
 
 	// grid_images_container
 	.grid_images_container {
@@ -291,22 +295,26 @@ input.css_autocomplete_hi_dato_hidden {
 		display: table;
 		clear: both;
 		//margin: 10px;
-		top: 10px;
+		top: 0;
 		position: relative;
 		width: 100%;
 
+		display: flex;
+	    flex-wrap: wrap;
+	    justify-content: flex-start;	    
+
 		img {
 			height: 70px;
-			width: 70px;//auto;
-			margin-right: 5px;
+			width: 70px;//auto;			
 			border: 1px solid #8e8e8e;
 			border-radius: 3px;
 			cursor: move;
+			margin-bottom: 5px;
+			margin-right: 5px;
 		}
 		img:active {
 			opacity: 0.4;
 		}
-
 	}
 
 
