--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -13,7 +13,9 @@
 	
 	width: 100%;
 	z-index: 10;
-	padding: 10px;
+	padding: 4px;
+	padding-bottom: 10px;
+    padding-left: 5px;
 	left: 0px;
 	}
 	.autocomplete_wrapper input.autocomplete_input {
