--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -437,6 +437,9 @@ th.tag_id_column {
 		  //-webkit-flex-direction: row;
 		  min-height: 28px;
 		}
+		.rows_wrapper.mosaic_ul {
+			//height: 160px;
+		}
 		.table_row {
 			//background-color: #FFC5AE;
 
@@ -662,6 +665,7 @@ th.tag_id_column {
 			//background-color: #a1b796;
 			width: 100%;
    			height: 100%;
+   			min-height: 160px;
 			margin: 0;
 			float: left;			
 			//display: block;
