--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -6,162 +6,223 @@
 
 /* WRAP DIV CONTAINER
 ------------------------------------------------------- */
-.css_wrap_portal {
-	padding-top: 5px;
-	padding-bottom: 7px;
-	}
-	/* > select only the first '.content_data' inside css_wrap_portal */
-	.css_wrap_portal > .content_data {
-		width: 100%;		
-		display: table ;
-		text-align: right;
-		position: relative;
-		//top: -25px;
-		//margin-bottom: -20px;		
-		//background-color: #edbff5;  
-		overflow: auto;
-	}
-	/* hide main label (> first label only) */
-	.css_wrap_portal > .css_label {
-		/* display: none; */
-		position: absolute;
-	}
-.component_relation_portal {
+	.css_wrap_portal {
+		padding-top: 5px;
+		padding-bottom: 7px;
+		}
+		/* > select only the first '.content_data' inside css_wrap_portal */
+		.css_wrap_portal > .content_data {
+			width: 100%;		
+			display: table ;
+			text-align: right;
+			position: relative;
+			//top: -25px;
+			//margin-bottom: -20px;		
+			//background-color: #edbff5;  
+			overflow: auto;
+		}
+		/* hide main label (> first label only) */
+		.css_wrap_portal > .css_label {
+			/* display: none; */
+			position: absolute;
+		}
+	.component_relation_portal {
 
-}
+	}
+
+
 
 /* BUTTONS
 ------------------------------------------------------- */
-.btn_new_ep {
-	text-transform: none;
-	display: inline-block;
-	float: none;
-	position: relative;
-	margin-right: 4px;
-	margin-left: 0px;
-	margin-top: 0;
-	padding:4px;
-	white-space: nowrap;
-	font-size: 84%;
-	font-weight: normal;
-	background-image: none;
-	/*background-color: #6e6e6e;*/
-	box-shadow: none;
-	/*z-index: 9000 !important;*/
-	position: relative;
-	top: -3px;
+	.btn_new_ep {
+		text-transform: none;
+		display: inline-block;
+		float: none;
+		position: relative;
+		margin-right: 4px;
+		margin-left: 0px;
+		margin-top: 0;
+		padding:4px;
+		white-space: nowrap;
+		font-size: 84%;
+		font-weight: normal;
+		background-image: none;
+		/*background-color: #6e6e6e;*/
+		box-shadow: none;
+		/*z-index: 9000 !important;*/
+		position: relative;
+		top: -3px;
 
-	padding-top: 3px;
-    padding-bottom: 3px;
-}
-.show_more_link {
-	text-transform: capitalize;
-	position: relative;
-	top: -2px;
-	/*background-color: rgba(204, 204, 204, 0.22);*/
-	width: 100%;
-	display: inline-block;
+		padding-top: 3px;
+	    padding-bottom: 3px;
 	}
-	.show_more_link:hover {
-		color: #ff9439;
+	.show_more_link {
+		text-transform: capitalize;
+		position: relative;
+		top: -2px;
+		/*background-color: rgba(204, 204, 204, 0.22);*/
+		width: 100%;
+		display: inline-block;
+		}
+		.show_more_link:hover {
+			color: #ff9439;
+		}
+	.btn_view_toogle{
+		float: none;
+		width: 20px;
+		height: 17px;
+		right: 0px;
+		top: 1px;
+		display: inline-block;
+		position: relative;
+		opacity: .3;
+		background: url('../../themes/default/view_full.svg') center center no-repeat;
+		transition: all .25s ease-in-out;
+		}
+		.btn_view_toogle:hover {
+			opacity: .7;
+		}
+	.btn_view_single{
+		background: url('../../themes/default/view_single_line.svg') center center no-repeat;
 	}
-.btn_view_toogle{
-	float: none;
-	width: 20px;
-	height: 17px;
-	right: 0px;
-	top: 1px;
-	display: inline-block;
-	position: relative;
-	opacity: .3;
-	background: url('../../themes/default/view_full.svg') center center no-repeat;
-	transition: all .25s ease-in-out;
+	.btn_view_mosaic {
+		background: url('../../themes/default/view_mosaic.svg') center center no-repeat;
 	}
-	.btn_view_toogle:hover {
-		opacity: .7;
+	/* Button more images 
+	---------------------------------------------- */
+	div.portal_toggle_more_elements_more {
+		background-position: 0 -96px;
+		background-position: -313px -119px;
+		/*
+		left: -17px;
+		top:-3px;
+		*/
+		float: right;
+		opacity: 0.8;
+		background-color:#c8c8c8;
+		padding: 0px;
+		border-radius: 2px;
+		z-index: 2000;
 	}
-.btn_view_single{
-	background: url('../../themes/default/view_single_line.svg') center center no-repeat;
-}
-.btn_view_mosaic {
-	background: url('../../themes/default/view_mosaic.svg') center center no-repeat;
-}
+	div.portal_toggle_more_elements_minus {
+		background-position: -24px -96px;
+		background-position: -288px -120px;
+	}
+	div.portal_more_elements_content {
+		display: none;
+		text-align: left;
+		white-space: normal;
+	}
+	.new_portal_record {
+		background-position: 0 -96px;
+		opacity: 0.3;
+	}
+	.find_portal_record {
+		background-position: -48px 0;
+		opacity: 0.3;
+	}
+	/* more_items link
+	-------------------------------------------------------------- */
+	.more_items_wrapper {
+		width: 100%;
+		padding: 5px;
+		padding-bottom: 0;
+
+		.show_all {
+			float: left;
+			text-align: left;
+		}
+
+		.more_items {
+			float: right;
+			text-align: right;			
+		}
+	}
+	/* portal_btn_pagination
+	-------------------------------------------------------------- */
+	.portal_btn_pagination {
+		//background-color: #C9C1F4;		
+		z-index: 999999;
+		padding: 5px;
+		display: block;
+		float: right;
+		height: 23px;
+		width: 25px;
+		opacity: .4;
+		background-color: #f2f2f2;
+		text-align: center;
+		font-weight: bold;
+		line-height: 11px;
+		font-size: 14px;
+		border: 1px solid #e1e0e0;
+		border-radius: 4px;
+		}		
+		.portal_btn_pagination.active {
+			opacity: 1;
+			cursor: pointer;
+		}
+		.portal_btn_pagination.active:hover {
+			background-color: #F3AA43;
+			color: #ffffff;
+		}
+		.portal_btn_pagination.active:active {
+			opacity: 0.4;
+		}
+		.portal_btn_pagination_left {
+			margin-left: 6px;
+		}
+	/* loading_portal
+	-------------------------------------------------------------- */
+	.loading_portal {
+		width: 100%;
+		height: 80px;
+	}
+	.portal_loading_msg {
+		min-height: 67px;
+		padding-left: 5px;
+		padding-top: 4px;
+		color: #a2bef4
+	}
+
+
 
 
 /* TD ID ICONS 
 ---------------------------------------------- */
-.th_large_icon {
-	background-position: -216px 0;
-	top: 0px;
-}
-.th_list_icon {
-	background-position: -264px 0;
-	top: 0px;
-}
+	.th_large_icon {
+		background-position: -216px 0;
+		top: 0px;
+	}
+	.th_list_icon {
+		background-position: -264px 0;
+		top: 0px;
+	}
+
 
 
 /* PORTAL INSIDE 
 ---------------------------------------------- */
-table.table_portal_inside {
-	margin: 0;
-	/*margin-top: -5px;*/
-	}
-	table.table_portal_inside TD {
-		border: none;
-	}
-	td.row_portal_inside {
-		font-size: 90%;
-		padding: 0 !important;
-	}
-	div.portal_first_element_content {
-		min-height: 0px;
-		text-align: left;
-		/* background-color: #b8f3f3; */
-	}
-
-/* BUTTON MORE IMAGES 
----------------------------------------------- */
-div.portal_toggle_more_elements_more {
-	background-position: 0 -96px;
-	background-position: -313px -119px;
-	/*
-	left: -17px;
-	top:-3px;
-	*/
-	float: right;
-	opacity: 0.8;
-	background-color:#c8c8c8;
-	padding: 0px;
-	border-radius: 2px;
-	z-index: 2000;
-}
-div.portal_toggle_more_elements_minus {
-	background-position: -24px -96px;
-	background-position: -288px -120px;
-}
-div.portal_more_elements_content {
-	display: none;
-	text-align: left;
-	white-space: normal;
-}
+	table.table_portal_inside {
+		margin: 0;
+		/*margin-top: -5px;*/
+		}
+		table.table_portal_inside td {
+			border: none;
+		}
+		td.row_portal_inside {
+			font-size: 90%;
+			padding: 0 !important;
+		}
+		div.portal_first_element_content {
+			min-height: 0px;
+			text-align: left;
+			/* background-color: #b8f3f3; */
+		}
 
 
-.new_portal_record {
-	background-position: 0 -96px;
-	opacity: 0.3;
-}
-.find_portal_record {
-	background-position: -48px 0;
-	opacity: 0.3;
-}
 
 
-.portal_loading_msg {
-	min-height: 67px;
-	padding-left: 5px;
-	padding-top: 4px;
-	color: #a2bef4
-}
+
 
 
 .portal_debug_info {
@@ -200,7 +261,6 @@ div.portal_more_elements_content {
 
 
 
-
 .table_rows_list tr {
 	/*cursor: move;*/
 }
@@ -216,67 +276,31 @@ div.portal_more_elements_content {
 
 /* COLUMN TAG ID
 ------------------------------------------------------- */
-th.tag_id_column {
-	width: 40px;
-}
-.tag_id {
-	background-image: url('../../themes/default/indexIn-n.png');
-	background-position: center;
-	background-repeat: no-repeat;
-	height: 17px;
-	width: 36px;
-	margin: 0;
-	padding: 0;	
-	display: block;
-	vertical-align: middle;
-	text-align: center;
-	color: #ffffff;
-	position: relative;
-	top: 6px;
-	cursor: default;
-}
-// Header td 
-//.portal_section .table_row.row_header .column._tag_id,
-.portal_section .table_row .column._tag_id {
-	width: 46px !important;
-    flex: initial;
-}
-
-
-
-
-
-/* PRINT CSS
-------------------------------------------------------- */
-.print_table_rows_list {
-	box-shadow: none;
-	width: 100%;
-	margin: 0px;
+	th.tag_id_column {
+		width: 40px;
 	}
-	.print_table_rows_list th {
-		background-image: none;
-		background-color: #ffffff;
-		border-bottom: 1px solid #eeeeee;
-		border-left:none;
-		font-weight: light;
-		padding-bottom: 5px;	
+	.tag_id {
+		background-image: url('../../themes/default/indexIn-n.png');
+		background-position: center;
+		background-repeat: no-repeat;
+		height: 17px;
+		width: 36px;
+		margin: 0;
+		padding: 0;	
+		display: block;
+		vertical-align: middle;
+		text-align: center;
+		color: #ffffff;
+		position: relative;
+		top: 6px;
+		cursor: default;
 	}
-	.print_table_rows_list td {
-		border: none;
-		background-color: #ffffff;
-		border-bottom: 1px solid #eeeeee;
-
+	// Header td 
+	//.portal_section .table_row.row_header .column._tag_id,
+	.portal_section .table_row .column._tag_id {
+		width: 46px !important;
+	    flex: initial;
 	}
-	.print_table_rows_list .table_rows_list th div.th_title{
-		max-width: none;
-		overflow: visible;
-	}
-	.print_table_rows_list .table_rows_list th:first-child{
-		border-top-left-radius: none;
-		border-bottom: 1px solid #eeeeee !important;
-	}
-
-
 
 
 
@@ -397,27 +421,16 @@ th.tag_id_column {
 
 
 
-#delete_dialog_portal .modal-body {
-	font-size: 1.3em;
-	text-transform: capitalize;
-	font-weight: 100;
-	color: #5a5a5a;
-}
+/* delete_dialog_portal
+------------------------------------------------------- */
+	#delete_dialog_portal .modal-body {
+		font-size: 1.3em;
+		text-transform: capitalize;
+		font-weight: 100;
+		color: #5a5a5a;
+	}
 
 
-/* COMPONENTS IN EDIT MODE INSIDE PORTAL LIST
--------------------------------------------------------------- 
-.portal_table_wraper .css_label {
-	display: none;
-}
-.portal_table_wraper .content_data {
-	width: 100%;
-}
-.portal_table_wraper .css_wrap_portal>.content_data {
-	top: -7px;
-	margin-bottom: -7px;
-}
-*/
 
 
 /* MODE HEADER FIXED POSITION . TESTING..
@@ -436,6 +449,7 @@ th.tag_id_column {
 		  //flex-direction: row;
 		  //-webkit-flex-direction: row;
 		  min-height: 28px;
+		  height: 100%;
 		}
 		.rows_wrapper.mosaic_ul {
 			//height: 160px;
@@ -596,7 +610,7 @@ th.tag_id_column {
 
 		.section_id_number {
 			display: block;			
-			text-align: right;			
+			text-align: right;
 			line-height: 1em;			
 			position: absolute;
 			top: 50%;
@@ -665,7 +679,7 @@ th.tag_id_column {
 			//background-color: #a1b796;
 			width: 100%;
    			height: 100%;
-   			min-height: 160px;
+   			// min-height: 160px;
 			margin: 0;
 			float: left;			
 			//display: block;
@@ -768,65 +782,39 @@ th.tag_id_column {
 
 
 
-	/* more_items link
-	-------------------------------------------------------------- */
-	.more_items_wrapper {
-		width: 100%;
-		padding: 5px;
-		padding-bottom: 0;
-
-		.show_all {
-			float: left;
-			text-align: left;
-		}
-
-		.more_items {
-			float: right;
-			text-align: right;			
-		}
-	}
-
-
-	/* portal_btn_pagination
-	-------------------------------------------------------------- */
-	.portal_btn_pagination {
-		//background-color: #C9C1F4;		
-		z-index: 999999;
-		padding: 5px;
-		display: block;
-		float: right;
-		height: 23px;
-		width: 25px;
-		opacity: .4;
-		background-color: #f2f2f2;
-		text-align: center;
-		font-weight: bold;
-		line-height: 11px;
-		font-size: 14px;
-		border: 1px solid #e1e0e0;
-		border-radius: 4px;
-		}		
-		.portal_btn_pagination.active {
-			opacity: 1;
-			cursor: pointer;
-		}
-		.portal_btn_pagination.active:hover {
-			background-color: #F3AA43;
-			color: #ffffff;
-		}
-		.portal_btn_pagination.active:active {
-			opacity: 0.4;
-		}
-		.portal_btn_pagination_left {
-			margin-left: 6px;
-		}
-
-
-	.loading_portal {
-		width: 100%;
-		height: 80px;
-	}
 	
+	
+
+
+/* PRINT CSS
+------------------------------------------------------- */
+	.print_table_rows_list {
+		box-shadow: none;
+		width: 100%;
+		margin: 0px;
+		}
+		.print_table_rows_list th {
+			background-image: none;
+			background-color: #ffffff;
+			border-bottom: 1px solid #eeeeee;
+			border-left:none;
+			font-weight: light;
+			padding-bottom: 5px;	
+		}
+		.print_table_rows_list td {
+			border: none;
+			background-color: #ffffff;
+			border-bottom: 1px solid #eeeeee;
+
+		}
+		.print_table_rows_list .table_rows_list th div.th_title{
+			max-width: none;
+			overflow: visible;
+		}
+		.print_table_rows_list .table_rows_list th:first-child{
+			border-top-left-radius: none;
+			border-bottom: 1px solid #eeeeee !important;
+		}
 
 
 
@@ -836,6 +824,7 @@ th.tag_id_column {
 		background-color: #BFBFBF !important;
 		box-shadow: 8px 8px 14px #d4d4d4;
 	}
+
 
 
 // Hide header list in portal when is empty
