--- a/lib/dedalo/tools/tool_time_machine/html/tool_time_machine_source.phtml
+++ b/lib/dedalo/tools/tool_time_machine/html/tool_time_machine_source.phtml
@@ -5,7 +5,7 @@
 	#$html    = "<!-- TOOL TIME MACHINE ACTUAL SOURCE COMPONENT [tipo:$tipo section_id:$id] -->";
 	
 	# Wrap
-	$html   .= "<div class=\"css_wrap_time_machine\">";
+	$html   .= "<div class=\"css_wrap_time_machine sgc_edit\">";
 		
 		# Header
 		$html 	.= "<div class=\"css_time_machine_label css_tool_label text_shadow_inset\">";
