--- a/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
+++ b/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
@@ -174,6 +174,7 @@
 								$autosearch_options_html .= "<label class=\"css_label label\">$name</label>";
 								# Input
 								$autosearch_options_html .= "<input type=\"text\" class=\"filter_fields_input\" ";
+								$autosearch_options_html .= "autocomplete='off'";
 								$autosearch_options_html .= 'onkeyup="component_autocomplete.search_from_filter_fields(this)" ';
 								$autosearch_options_html .= "name=\"{$input_name}\" ";
 								$autosearch_options_html .= 'value="" ';								
@@ -182,7 +183,7 @@
 								}							
 								$autosearch_options_html .= "data-tipo=\"{$current_component_tipo}\" ";
 								$autosearch_options_html .= "data-modelo=\"{$current_modelo_name}\" ";
-								$autosearch_options_html .= "data-type_map='$current_type_map_json'";								
+								$autosearch_options_html .= "data-type_map='$current_type_map_json'";
 								$autosearch_options_html .= "/>";
 								
 								// Mode full component search							
