Fix issue when component_text_area do fallback when in not list mode

--- a/lib/dedalo/component_text_area/html/component_text_area_list.phtml
+++ b/lib/dedalo/component_text_area/html/component_text_area_list.phtml
@@ -5,7 +5,7 @@
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in', $modo, $lang);
 	
-	print "\n<div class=\"wrap_component css_wrap_text_area css_wrap_text_area_{$modo} wrap_component_{$tipo}\" id=\"{$id_wrapper}\" ";
+	print "<div class=\"wrap_component css_wrap_text_area css_wrap_text_area_{$modo} wrap_component_{$tipo}\" id=\"{$id_wrapper}\" ";
 	print "data-tipo=\"{$tipo}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-parent=\"{$parent}\" ";
