--- a/lib/dedalo/component_text_area/html/component_text_area_list_thesaurus.phtml
+++ b/lib/dedalo/component_text_area/html/component_text_area_list_thesaurus.phtml
@@ -3,23 +3,25 @@
 	# VISUALIZADOR HTML	
 	
 	
-	#print "\n<div class=\"\" >";
+	#print "<div class=\"\" >";
 	
 		
 		# CONTENIDO (INPUT)
 		$html_contenido  = '';
-		$html_contenido .= "<div class=\"list_thesaurus_element text_area_list_thesaurus\" onclick=\"component_text_area.show_component_in_row_thesaurus(this)\"
-		data-section_tipo=\"$section_tipo\"
-		data-parent=\"$parent\"
-		data-tipo=\"$tipo\"
-		data-lang=\"$lang\"
-		data-modo=\"edit\"
-		>$icon_label</div>";
+		$html_contenido .= "<div class=\"list_thesaurus_element text_area_list_thesaurus\" onclick=\"component_text_area.show_component_in_row_thesaurus(this)\" ";
+		$html_contenido .= "data-section_tipo=\"$section_tipo\" ";
+		$html_contenido .= "data-parent=\"$parent\" ";
+		$html_contenido .= "data-tipo=\"$tipo\" ";
+		$html_contenido .= "data-lang=\"$lang\" ";
+		$html_contenido .= "data-modo=\"edit\" ";
+		$html_contenido .= ">";
+		$html_contenido .= $icon_label;
+		$html_contenido .= "</div>";
 		
 		
 		# PRINT HTML
 		print $html_contenido;
 	
 	
-	#print "\n</div>\n\n"; //wrap
+	#print "</div>"; //wrap
 ?>
