Fix issue when tool_lang target lang selector is overlaped by inspector div

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -198,7 +198,10 @@
 	padding-left: 4px;
 	padding-right: 4px;
 	z-index: 10;
-	width: 100%;
+	//width: 100%;
+
+    float: right;
+    width: 400px;
 }
 #inspector_log .ok, #inspector_log .error {
 	margin: 0px;
