fix the list in for the time_machine_list in inspector

--- a/lib/dedalo/time_machine_list/css/time_machine_list.less
+++ b/lib/dedalo/time_machine_list/css/time_machine_list.less
@@ -24,12 +24,9 @@
 }
 /* WRAPPER time_machine_list
 ------------------------------------------------------- */
-	/*.time_machine_grid{
+	.time_machine_grid{
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-	}*/
-	.time_machine_list_data_row_center{
-		justify-self: center;
+		grid-template-columns: repeat(3, 1fr) 2fr;
 	}
 	.time_machine_list_data_row:hover{
 		color: #000;
