Fixed apperance issue on Firefox of mosaic images (mosaic_li)

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -661,7 +661,8 @@
 		//background-color: #FFCD95;
 		width: 100%;
 		min-height: 50px;
-		display: table;
+		//display: table;
+		display: block;
 
 		.id_column {
 			//display: none;
@@ -684,7 +685,7 @@
 			float: left;			
 			//display: block;
 			//display: flex;
-			display: table;
+			display: block;
 			//flex-wrap: nowrap;	//nowrap | wrap | wrap-reverse;
 
 			position: relative;
@@ -837,6 +838,8 @@
 #wrap_time_machine_page .btn_new_ep {
 	display: none;
 }
+
+
 
 
 
