Fixed css appearance issue (wrapper changed to 'block' from 'table')

--- a/lib/dedalo/component_geolocation/css/component_geolocation.less
+++ b/lib/dedalo/component_geolocation/css/component_geolocation.less
@@ -10,6 +10,8 @@
 .css_wrap_geolocation, .css_wrap_geolocation_tm {
 	z-index: 1;
 	//min-height: 400px;
+
+	display: table;
 	}
 	.css_wrap_geolocation .content_data {
 		height: 96%;
