Adapted component_publication to use new get_ar_list_of_values2

--- a/lib/dedalo/component_publication/html/component_publication_edit.phtml
+++ b/lib/dedalo/component_publication/html/component_publication_edit.phtml
@@ -31,8 +31,9 @@
 				$html_content .= "";
 				break;
 
-		case 1	: 	
-				$html_content .= "$valor";
+		case 1	:
+				$valor = $this->get_valor();
+				$html_content .= $valor;
 				break;
 
 		case 2 :
